src/Pages/Homepage/Homepage.css
@font-face {
  font-family: Inter;
  src: url("../../Font/Inter-Regular.ttf");
  /* Add more variations (bold, italic, etc.) if needed */
}

@font-face {
  font-family: InterBold;
  src: url("../../Font/Inter-Bold.ttf");
  /* Add more variations (bold, italic, etc.) if needed */
}

.Inter {
  font-family: Inter;
}
.InterBold {
  font-family: InterBold;
}


.maincontainer {
  background-color: rgb(35, 36, 40);
  padding: 1px;
  display: flex;
  min-height: 200vh;
  width: 100%;

}

.Leftcontainer {
  background-color: rgb(53, 54, 58);
  margin: 10px;
  max-width: 20%;
  min-width: 20%;
  max-height: 10vw;
  border-radius: 5px;
  position: relative;
  position: sticky;
  top: 5px;
  margin-bottom: 20px;
}

.logo_name_left {
  color: white;
  padding-top: 15px;
  padding-bottom: 10px;
  display: flex;
  width: 100%;
  justify-content: space-between;
}
.quickSearchBox{
  display: flex;
    justify-content: center;
}
.quickSearch{
  background-color: black;
  color: white;
  width: 80%;
  border-radius: 5px;
  border: none;
  height: 25px;
  text-align: center;
  margin-top: 10px;
}

.logo {
  margin-left: 10%;
}

.name {
  margin-right: 10%;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 800;
  font-size: 30px;
}
.pageTitle{
  margin-top: 20px;
  margin-bottom: 20px;
  margin-left: 10%; 
}
.pageTitle a{
  color: white;
  text-decoration-line: none;
  margin-right: 10%;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 300;
  font-size: 16px;
  margin-top: 20px;
  margin-bottom: 20px;
}

.profile {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: absolute;
  bottom: 10px;
  left: 50%;
  /* Center horizontally */
  transform: translateX(-50%);
  /* Center horizontally */
}

.userLogo {
  background-color: rgb(90, 101, 234);
  border: 2px solid rgb(58, 60, 82);
  width: 50px;
  height: 50px;
  border-radius: 100px;
  position: relative;
}

.smallUserLogo {
  background-color: rgb(90, 101, 234);
  width: 10px;
  height: 10px;
  border-radius: 100px;
  position: absolute;
  bottom: 0;
  right: 0;
}

.profileName {
  color: white;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
}

.profileEmailHomepage {
  color: white;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 400;
  font-size: 12px;

}

.submitAQuestionContainer {
  background-color: rgb(53, 54, 58);
  width: 100%;
  height: 200px;
  margin-top: 10px;
  margin-right: 10px;

}

.submitAQuestionHeader {
  color: white;
  font-family: 'InterBold';
  font-style: normal;
  font-weight: 800;
  font-size: 36px;
  margin-top: 10px;
  margin-left: 10px;

}

.inputQuestion {
  width: 80%;
  margin-left: 10%;
}

.submitAQuestiontitle {
  color: white;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
}

.inputQuestionTitle {
  background-color: rgb(53, 54, 58);
  color: white;
  width: 100%;
  border-radius: 2px;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 400;
  font-size: 12px;

}

.inputPlaintext {
  background-color: rgb(53, 54, 58);
  color: white;
  width: 100%;
  padding-bottom: 50px;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
}

.dropdown {
  position: relative;
  display: inline-block;
  color: white;
  padding: 5px;
  margin-top: 5px;
  margin-right: 15px;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: black;
  min-width: 160px;
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
  z-index: 1;
  margin: -5px;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
}

.dropdown:hover .dropdown-content {
  display: block;
  margin-top: 2px;
}

.arrow-down {
  border-width: 0 3px 3px 0;
  display: inline-block;
  padding: 3px;
  transform: rotate(45deg);
  margin-left: 20px;
  margin-bottom: 3px;
}

.menubox {
  display: flex;
  padding: -1px;
}

.submitButton {
  background: #5A65EA;
  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
  border-radius: 5px;
  width: 120px;
  color: white;
  border: none;
  margin-left: auto;
  margin-top: 5px;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 800;
  font-size: 16px;
  letter-spacing: 0.12em;
}

.newQustion {
  color: white;
  font-family: 'InterBold';
  font-style: normal;
  font-weight: 800;
  font-size: 36px;
  margin-top: 40px;
  margin-left: 10px;
  margin-bottom: 10px;
}

.newQustionBox {
  border: 1px solid white;
  border-radius: 5px;
  width: 80%;
  margin-left: 10%;
  margin-bottom: 20px;
}

.newQustionHeader {
  display: flex;
  color: white;
  justify-content: space-between;
  margin-bottom: 10px;
  margin-top: 10px;
  width: 90%;
  margin-left: 5%;
}

.Headline {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 600;
  font-size: 12px;
}

.smallUserLogo2 {
  background-color: rgb(90, 101, 234);
  width: 10px;
  height: 10px;
  border-radius: 100px;
  margin-right: 10px;
}

.username {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 600;
  font-size: 12px;

}

.userQ {
  display: flex;
  align-items: center;
}

.newQuestionBody {
  border-radius: 5px;
  width: 90%;
  margin-left: 5%;
  height: 100px;
  margin-bottom: 10px;
}

.newQuestionBodyText {
  color: white;
  margin-left: 5px;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 300;
  font-size: 12px;
}

.newQuestionTags {
  color: white;
  display: flex;
  width: 90%;
  margin-left: 5%;
  margin-bottom: 10px;
}

.NQtag {
  border-radius: 30px;
  margin-right: 20px;
  padding-left: 30px;
  padding-right: 30px;
  padding-top: 2px;
  padding-bottom: 2px;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 600;
  font-size: 14px;
}

